--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,8 +1,8 @@
 Reportico Open Source PHP Report Designer
 =========================================
 
-3.2.Beta - 24th July 2013
--------------------------
+3.2 - 15th August 2013
+----------------------
 Printable HTML button
 Form Report
 New button icons for output format selection and report control
