--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,6 +1,23 @@
 Reportico Open Source PHP Report Designer
 =========================================
 
+4.0 - 29th May 2015
+-------------------
+Pass sql to reportico engine without having to create report
+Support bootstrap both as loaded within Reportico and for embedding in exsiting bootstra web page
+Dynamic sortable, searchable, pageable grids
+NVD3 charting library
+New SQL command criteria option to allow users to type in SQL
+Dropdown menu and static menu array passable to reportico engine to create configurable report menus
+Configurable turning on and off of UI elements such a report control checkboxes, output buttons etc
+
+3.3 - 24th May 2015
+-------------------
+Security Fixes
+Fix passing through of external user
+Persist external parameters through reportico session
+
+
 3.2 - 15th August 2013
 ----------------------
 Printable HTML button
